# libnavsegda

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  hello.h  hellofunc.c
